--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -862,3 +862,63 @@ dl dd {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
+
+
+.site-branding {
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    font-size: 1rem
+}
+
+.profile,
+.site-logo {
+    -ms-flex: 0 0 auto;
+    -webkit-flex: 0 0 auto;
+    flex: 0 0 auto;
+    margin: 0 10px 0 0
+}
+
+.profile a,
+.site-logo a {
+    color: #1d1d1d
+}
+
+.site-logo img {
+    max-height: 45px
+}
+
+.profile .avatar {
+    border: 2px solid #d4a259;
+    border-radius: 100%;
+    display: block;
+    height: 45px;
+    width: 45px
+}
+
+.site-title {
+    font-family: "Crimson Text", serif;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1;
+    margin: 0
+}
+
+.site-title a {
+    color: #fff;
+    text-decoration: none
+}
+
+.site-description {
+    color: #666;
+    font-family: Karla, sans-serif;
+    font-weight: 400;
+    font-size: .625rem;
+    letter-spacing: .15em;
+    line-height: 1;
+    margin: .25em 0 0;
+    text-transform: uppercase
+}
