--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -922,3 +922,31 @@ dl dd {
     margin: .25em 0 0;
     text-transform: uppercase
 }
+
+.social-links {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-top: 1.66667em
+}
+
+.social-links a {
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    color: #666;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    margin: 0 10px .5em 0;
+    padding: 0 3px;
+    text-decoration: none
+}
+
+.social-links svg {
+    fill: currentColor;
+    height: 18px
+}
