--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -898,6 +898,7 @@ dl dd {
 }
 
 .site-title {
+    color: #666;
     font-family: "Crimson Text", serif;
     font-size: 1rem;
     font-weight: 600;
