Updated 'stylesheets/stylesheet.css' via CloudCannon

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -877,7 +877,8 @@ dl dd {
 }
 
 .profile,
-.site-logo {
+.site-logo,
+.site-identity {
     /*-ms-flex: 0 0 auto;
     -webkit-flex: 0 0 auto;
     flex: 0 0 auto;*/
