Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,13 @@
                             </a>
                           </p>
     
-              <div class="site-identity">
+              <!--<div class="site-identity">-->
                 <h1 class="site-title">
                     <a href="/">Samuel Melrose</a>
                 </h1>
                 
                 <p class="site-description">IT Systems Engineer</p>
-              </div><!-- .site-identity -->
+              <!--</div>--><!-- .site-identity -->
                     
               <p class="social-links">
                   <a href="https://twitter.com/c4rdbo4rdf5h" target="_blank">
