--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -908,6 +908,9 @@ dl dd {
     line-height: 1.2;
     font-weight: 600;
     margin: 0;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     -ms-flex-pack: center;
     justify-content: center;
     -ms-flex-align: center;
@@ -924,7 +927,6 @@ dl dd {
 }
 
 .site-description {
-    color: #666;
     font-family: Karla, sans-serif;
     font-weight: 400;
     letter-spacing: .15em;
@@ -932,7 +934,16 @@ dl dd {
     line-height: 1.2;
     margin-top: .4em
     margin: .25em 0 0;
-    text-transform: uppercase;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.site-description a {
+    color: #666;
+    text-decoration: none;
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
