--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -934,6 +934,9 @@ dl dd {
     line-height: 1.2;
     margin-top: .4em
     margin: .25em 0 0;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
     -ms-flex-pack: center;
     justify-content: center;
     -ms-flex-align: center;
