--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -985,7 +985,7 @@ dl dd {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: Karla, sans-serif;
+  font-family: "Crimson Text", serif;
   font-size: 18px;
 
   a {
@@ -999,7 +999,7 @@ nav {
 
 .posts > .post {
   padding: 2em 0 2em 0;
-  border-top: 1px solid $lightGray;
+  border-top: 1px solid;
 }
 
 .posts > .post:last-child {
