--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -999,7 +999,7 @@ nav {
 
 .posts > .post {
   padding: 2em 0 2em 0;
-  border-top: 1px solid;
+  border-top: 1px solid #666;
 }
 
 .posts > .post:last-child {
@@ -1010,7 +1010,7 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid #666;
     padding: 0.1em 1em;
     color: #666;
     font-size: 22px;
