--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -998,7 +998,7 @@ nav {
 }
 
 .posts > .post {
-  padding: 2em 0 2em 0;
+  /*padding: 2em 0 2em 0;*/
   border-top: 1px solid #666;
 }
 
@@ -1010,7 +1010,7 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid #666;
+    /*border-left: 2px solid #666;*/
     padding: 0.1em 1em;
     color: #666;
     font-size: 15px;
