--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1> {{ site.name }} </h1>
+        <h1> <a href="/"{{ site.name }}</a></a> </h1>
         <!--<h2></h2>-->
         <a href="https://github.com/iamacarpet" class="button"><small>View me on</small> GitHub</a>
       </div>
