--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,10 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    {% include google_analytics.html %}
 
-    <title> {{ page.title }} </title>
+    <title> {{ page.title }} - Infitialis Blog</title>
   </head>
 
   <body>
