--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
+    <script data-ad-client="ca-pub-9534916539380764" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
     {% include google_analytics.html %}
 
     <title> {{ page.title }} - Infitialis Blog</title>
